  
syntax = "proto3";

package max;

message FindMaxRequest {
	int32 number = 1;
}

message FindMaxResponse {
	int32 max = 1;
}

service FindMax {
	rpc FindMaximum (stream FindMaxRequest) returns (stream FindMaxResponse) {}
}